--- a/conquez/authen/templates/authen/splash.html
+++ b/conquez/authen/templates/authen/splash.html
@@ -147,8 +147,8 @@
                                 <div class="col-md-6">
                                     <div class="reviews_item m-top-40">
                                         <div class="reviews_item_icon pull-left">“</div>
-                                        <h3>Comment Here</h3>
-                                        <h5>Person1</h5>
+                                        <h3>Amazing! i felt this app provided me with a unique way to learn!!</h3>
+                                        <h5>Bosco Kwan (Term 2 DTC)</h5>
                                         <div class="reviews_item_icon1 pull-right text-right">“</div>
                                     </div>
                                 </div><!-- End off col-md-6 -->
@@ -156,24 +156,24 @@
                                 <div class="col-md-6">
                                     <div class="reviews_item m-top-40">
                                         <div class="reviews_item_icon pull-left">“</div>
-                                        <h3>Comment Here</h3>
-                                        <h5>Person2</h5>
+                                        <h3>Very educational!</h3>
+                                        <h5>Tyler Tsui (Term 2 DTC)</h5>
                                         <div class="reviews_item_icon1 pull-right text-right">“</div>
                                     </div>
                                 </div><!-- End off col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="reviews_item m-top-40">
                                         <div class="reviews_item_icon pull-left">“</div>
-                                        <h3>Comment Here</h3>
-                                        <h5>Person3</h5>
+                                        <h3>Love the globe!</h3>
+                                        <h5>Craig (Term 2 DTC)</h5>
                                         <div class="reviews_item_icon1 pull-right text-right">“</div>
                                     </div>
                                 </div><!-- End off col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="reviews_item m-top-40">
                                         <div class="reviews_item_icon pull-left">“</div>
-                                        <h3>Comment Here</h3>
-                                        <h5>Person4</h5>
+                                        <h3>Awesome!</h3>
+                                        <h5>Brian (Term 2 DTC)</h5>
                                         <div class="reviews_item_icon1 pull-right text-right">“</div>
                                     </div>
                                 </div><!-- End off col-md-6 -->
