--- a/conquez/country/static/antarctica/css/stylesheet.css
+++ b/conquez/country/static/antarctica/css/stylesheet.css
@@ -2,44 +2,30 @@ body{
     background-color: #363442;
     font-family: Verdana;
 }
-div{
-    color: white;
-}
-p{
-    text-align: center;
+
+p {
     font-size: 4em;
-    top: 3em;
+    color: white;
+    text-align: center;
 }
-#context{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 14em;
-    font-size: 2em;
-}
+
 a{
     color: white;
     text-decoration: none;
 }
 
 #headline{
-    top: 40%;
-    left: 50%;
-    width: 8em;
-    font-size: 7em;
-    transform: translate(-50%, -40%);
-    position: absolute;
-
+    width: 12em;
+    font-size: 1.5em;
+    text-align: center;
+    margin: 0 auto;
 }
 
 img{
-    height: 25em;
-    width: 25em;
-    top: 10%;
-    left: 50%;
-    transform: translate( -50%, 0);
-    position: absolute;
+    height: 6em;
+    width: 6em;
+    margin: 0 auto;
+    margin-top: 60px;
 }
 #btn{
     border: 1px solid white;
@@ -49,5 +35,10 @@ img{
     top: 77%;
     left: 50%;
     transform: translate(-50%, -75%);
+}
+
+#penguin {
+    text-align: center;
+    margin: 0 auto;
 }
 
